# videoflow-contrib

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  TODO.md  flake_command.sh  mypy.ini  ruff.toml  setup.py  validate-components.sh
.claude/agents/: solution-verifier.md  videoflow-author.md
.claude/docs/: ADDING_A_COMPONENT.md  DEPLOY_VERIFY.md  SOLUTIONS.md
.github/workflows/: components.yml
annotators/: Dockerfile  component.yaml  pyproject.toml  requirements.txt  setup.py
annotators/videoflow_contrib/annotators/: object_annotator.py
detector_mxnet/: Dockerfile
detector_mxnet/videoflow_contrib/detector_mxnet/: __init__.py  mxnet_object_detector.py
detector_tf/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml  setup.py
detector_tf/examples/: face_obfuscation.py  object_detector.py
detector_tf/tests/: test_release_resources.py  test_stub.py
detector_tf/tests/examples_tests/: test_detection_example.py
detector_tf/videoflow_contrib/detector_tf/: __init__.py  tensorflow_utils.py  tf_object_detector.py
detectron2/: Dockerfile  MANIFEST.in  component.yaml  gpu.Dockerfile  pyproject.toml  requirements.txt  setup.py
detectron2/examples/: humanpose_example.py
detectron2/videoflow_contrib/detectron2/: __init__.py  humanpose.py
detectron2/videoflow_contrib/detectron2/configs/: BASE-RCNN-FPN.yaml  Base-Keypoint-RCNN-FPN.yaml  R50_FPN_3x.yaml
humanencoder/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py
humanencoder/videoflow_contrib/humanencoder/: __init__.py  encoder.py  tensorflow_utils.py
multiview_fuser/: Dockerfile  component.yaml  pyproject.toml
multiview_fuser/tests/: test_fuser.py  test_geometry.py
multiview_fuser/videoflow_contrib/multiview_fuser/: __init__.py  ballkf.py  fuser.py  geometry.py  registry.py
offside_engine/: Dockerfile  component.yaml  pyproject.toml
offside_engine/tests/: test_backtrack.py  test_engine.py  test_events.py  test_law.py
offside_engine/videoflow_contrib/offside_engine/: __init__.py  backtrack.py  engine.py  events.py  law.py
offside_visualizer/: Dockerfile  component.yaml  pyproject.toml
offside_visualizer/videoflow_contrib/offside_visualizer/: __init__.py  drawing.py  viz.py
person_reid/: Dockerfile  requirements.txt
person_reid/videoflow_contrib/person_reid/: mxnet_person_feature_extractor.py  mxnet_person_reid.py
pitch_calib/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml
pitch_calib/tests/: test_solve.py
pitch_calib/videoflow_contrib/pitch_calib/: __init__.py  landmarks.py  model.py  node.py  solve.py
pose_topdown/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml
pose_topdown/videoflow_contrib/pose_topdown/: __init__.py  pose.py
retinaface/: Dockerfile  README.md  gpu.Dockerfile  requirements.txt  setup.py
retinaface/videoflow_contrib/retinaface/: __init__.py  retinaface.py  retinaface_detector.py
segmentation_tf/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml  setup.py
segmentation_tf/examples/: segmenter.py
soccer_detector/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml
soccer_detector/tests/: test_format.py
soccer_detector/videoflow_contrib/soccer_detector/: __init__.py  detector.py
solutions/face_obfuscation/: Dockerfile  README.md  common.py  config.example.yaml  config.template.yaml  face_obfuscation.py  face_obfuscation_nodes.py  gpu.Dockerfile  prepare.py  requirements-gpu.txt  requirements.txt
solutions/human_tracking/: Dockerfile  README.md  common.py  config.example.yaml  config.template.yaml  gpu.Dockerfile  human_tracking.py  human_tracking_nodes.py  prepare.py  requirements-gpu.txt  requirements.txt
solutions/offside/: Dockerfile  README.md  calibrate.py  common.py  config.example.yaml  config.template.yaml  download_weights.py  fit_teams.py  gpu.Dockerfile  offside.py  offside_nodes.py  prepare.py  requirements-gpu.txt  requirements.txt  sync_offsets.py
solutions/toy_calculator/: Dockerfile  README.md  toy_calculator.py
solutions/toy_fusion/: Dockerfile  README.md  toy_fusion.py
solutions/toy_router/: Dockerfile  README.md  toy_router.py
synced_video_reader/: Dockerfile  component.yaml  pyproject.toml
synced_video_reader/videoflow_contrib/synced_video_reader/: __init__.py  reader.py
team_classifier/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml
team_classifier/tests/: test_fitting.py
team_classifier/videoflow_contrib/team_classifier/: __init__.py  classifier.py  fitting.py
tests/: test_release_resources.py  test_stub.py
tests/examples_tests/: test_detection_example.py
tracker_botsort/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml
tracker_botsort/videoflow_contrib/tracker_botsort/: __init__.py  tracker.py
tracker_deepsort/: Dockerfile  component.yaml  pyproject.toml  requirements.txt  setup.py
tracker_deepsort/videoflow_contrib/tracker_deepsort/: deepsort.py  detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  nn_matching.py  track.py  tracker.py
tracker_sort/: Dockerfile  component.yaml  pyproject.toml  requirements.txt  setup.py
tracker_sort/videoflow_contrib/tracker_sort/: __init__.py  sort.py
tracktor/: Dockerfile  README.md  component.yaml  gpu.Dockerfile  pyproject.toml  requirements.txt  setup.py
tracktor/examples/: people_tracking.py  people_tracking.sh
tracktor/videoflow_contrib/examples/: people_tracking.py
tracktor/videoflow_contrib/tracktor/: __init__.py  frcnn_fpn.py  reid.py  tracker.py  tracktor.py  triplet_loss.py  utils.py
videoflow_contrib/processors/: identity.py
vlm_caption/: Dockerfile  README.md  component.yaml  gpu.Dockerfile  pyproject.toml
vlm_caption/tests/: test_captioner.py
vlm_caption/videoflow_contrib/vlm_caption/: __init__.py  captioner.py
yolo/: Dockerfile  component.yaml  gpu.Dockerfile  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py
yolo/videoflow_contrib/yolo/: __init__.py  yolo.py
yolo/videoflow_contrib/yolo/yolo3/: model.py
(+34 files in other folders)
