[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videoflow_contrib_detectron2"
version = "1.0.0"
description = "Detectron2 (PyTorch) human pose estimation for the Videoflow library"
license = { text = "MIT" }
authors = [{ name = "Jadiel de Armas", email = "jadielam@gmail.com" }]
requires-python = ">=3.12"
# torch/torchvision (from the PyTorch cpu/cu124 index) and detectron2 (built from
# source with CUDA ops) are installed by the Dockerfiles — they need index URLs and
# a source build that a plain dependency spec can't express. Only videoflow is a
# resolvable dependency here.
dependencies = ["videoflow>=1.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/videoflow/videoflow-contrib"

[tool.hatch.build.targets.wheel]
only-include = ["videoflow_contrib/detectron2"]
