[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videoflow_contrib_multiview_fuser"
version = "1.0.0"
description = "Multi-view 3D fuser (ground-plane association + DLT triangulation) for the Videoflow offside system"
license = { text = "MIT" }
authors = [{ name = "Jadiel de Armas", email = "jadielam@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "videoflow>=1.0.0",
    "numpy>=1.24",
    "scipy>=1.11",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/videoflow/videoflow-contrib"

[tool.hatch.build.targets.wheel]
only-include = ["videoflow_contrib/multiview_fuser"]
