[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videoflow_contrib_soccer_detector"
version = "0.1"
description = "RF-DETR soccer detector (players/GK/referee/ball) for Videoflow"
license = { text = "Apache-2.0" }
authors = [{ name = "Jadiel de Armas", email = "jadielam@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "videoflow",
    "numpy>=1.24",
    "ultralytics>=8.2",   # 'yolo' backend — runs anywhere (torch >= 2.0)
    "rfdetr>=1.0",        # 'rfdetr' backend — higher accuracy, needs torch >= 2.4
    "pillow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# GPU: the -cuda base image provides CUDA torch; rfdetr uses it.
[project.optional-dependencies]
gpu = ["rfdetr>=1.0"]

[project.urls]
Homepage = "https://github.com/videoflow/videoflow-contrib"

[tool.hatch.build.targets.wheel]
only-include = ["videoflow_contrib/soccer_detector"]
