[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videoflow_contrib_tracker_botsort"
version = "1.0.0"
description = "Appearance-aware multi-object tracker (BoxMOT: BoT-SORT-ReID and friends) for Videoflow"
license = { text = "AGPL-3.0" }
authors = [{ name = "Jadiel de Armas", email = "jadielam@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "videoflow>=1.0.0",
    "numpy>=1.24",
    "boxmot>=11.0,<13",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
gpu = ["boxmot>=11.0,<13"]

[project.urls]
Homepage = "https://github.com/videoflow/videoflow-contrib"

[tool.hatch.build.targets.wheel]
only-include = ["videoflow_contrib/tracker_botsort"]
